<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="9"
    android:background="#e0f2f1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        >
    <TextView
        android:textColor="#000000"
        android:id="@+id/texto_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_consulta"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/tipo_consulta"
        android:drawSelectorOnTop="true">
    </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="16dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            >
        <TextView
            android:id="@+id/textView_Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_solicitante"
            android:textColor="@color/negro"
            android:textStyle="bold"
            />

            <EditText
                android:id="@+id/editText_Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/negro"
                android:layout_marginLeft="6dp"
                />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            >

        <TextView
            android:id="@+id/textView_Apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido_solicitante"
            android:textColor="@color/negro"
            android:textStyle="bold"
            />

            <EditText
                android:id="@+id/editText_Apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/negro"
                android:layout_marginLeft="6dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:background="#009688">

        <TextView
            android:layout_margin="16dp"
            android:text="@string/cita"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#004d40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cabecera"
            android:enabled="false"
            android:textAlignment="center" />

        <Button
            android:id="@+id/boton_enviar_consulta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar_cita"
            />

        <Button
            android:id="@+id/boton_cancelar_consulta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar_cita"
            />

    </LinearLayout>

</LinearLayout>
